--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Cosplay Cafe</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <script src="https://kit.fontawesome.com/3857b0a1bd.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -17,15 +19,21 @@
 <body>
     <nav class="nav">
         <div class="wrapper">
-            <a href="#"><img class="nav__logo" src="./img/BIAŁE.png"
+            <a href="#"><img class="nav__logo" src="./img/logo_poziom.png"
                     alt="Logo Cosplay Cafe. Przedstawia połączenie filiżanki i kota."></a>
+
+            <button class="nav__exit"><i class="fa-solid fa-xmark"></i></button>
             <div class="nav__container">
-                <a href="#aboutus" class="nav__items">O nas</a>
-                <a href="#menu" class="nav__items">Menu</a>
-                <a href="#events" class="nav__items">Wydarzenia</a>
-                <a href="#contact" class="nav__items">Kontakt</a>
-                <a href="#cart" class="nav__items"><i class="fa-solid fa-basket-shopping"></i></a>
+                <a href="index.html#aboutus" data-selector="#aboutus" class="nav__items js-items">O nas</a>
+                <a href="index.html#menu" data-selector="#menu" class="nav__items js-items">Menu</a>
+                <a href="index.html#events" data-selector="#events" class="nav__items js-items">Wydarzenia</a>
+                <a href="index.html#contact" data-selector="#contact" class="nav__items js-items">Kontakt</a>
             </div>
+            <!-- <div class="nav_btn-container">
+                <a href="#cart" class="nav__items"><i class="fa-solid fa-basket-shopping"></i></a>
+                <button class="nav__btn"> <i class="fa-solid fa-bars nav__bars "></i></button>
+            </div> -->
+
         </div>
     </nav>
     <header class="header header__img">
@@ -38,16 +46,18 @@
                 <div class="header__btn-container">
                     <a href="#menu">
                         <button class="header__btn btn">Zamów online</button></a>
-                    <button class="header__btn btn">Zarezerwuj stolik</button>
+                    <a href="rezerwacje.html"><button class="header__btn btn">Zarezerwuj stolik</button></a>
                 </div>
             </div>
         </div>
         <div class="header__shadow"></div>
     </header>
+
     <main class="main">
+
         <section id="aboutus" class="aboutus">
             <div class="wrapper">
-                <h2 class="section-heading">O nas</h2>
+                <h2 class="section__heading">O nas</h2>
                 <div class="underline"></div>
                 <p class="aboutus__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut odio modi ab eos
                     molestiae, nobis aperiam quia similique itaque sunt maxime tempore optio ipsam illum reiciendis?
@@ -59,23 +69,27 @@
                     voluptates nostrum ex reprehenderit. Est repudiandae ad expedita distinctio aliquid!</p>
                 <div class="aboutus__items">
                     <div class="aboutus__container">
-                        <i class="fa-solid fa-face-laugh-squint aboutus__icon"></i>
-                        <h3 class="aboutus__heading">Lorem ipsum</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab quod rerum commodi soluta et
+                        <i class="fa-solid fa-hat-wizard aboutus__icon"></i>
+                        <h3 class="aboutus__heading">Kelnerzy cosplayerzy</h3>
+                        <p class="aboutus__container-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab
+                            quod rerum commodi soluta et
                             accusantium eum similique officiis esse consectetur possimus labore, illo voluptates minus
                             cupiditate sunt incidunt voluptate vero.</p>
                     </div>
                     <div class="aboutus__container">
-                        <i class="fa-solid fa-face-laugh-squint aboutus__icon"></i>
-                        <h3 class="aboutus__heading">Lorem ipsum</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab quod rerum commodi soluta et
+                        <i class="fa-solid fa-utensils aboutus__icon"></i>
+
+                        <h3 class="aboutus__heading">Tematyczne menu</h3>
+                        <p class="aboutus__container-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab
+                            quod rerum commodi soluta et
                             accusantium eum similique officiis esse consectetur possimus labore, illo voluptates minus
                             cupiditate sunt incidunt voluptate vero.</p>
                     </div>
                     <div class="aboutus__container">
-                        <i class="fa-solid fa-face-laugh-squint aboutus__icon"></i>
-                        <h3 class="aboutus__heading">Lorem ipsum</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab quod rerum commodi soluta et
+                        <i class="fa-regular fa-calendar aboutus__icon"></i>
+                        <h3 class="aboutus__heading">Fantastyczne eventy</h3>
+                        <p class="aboutus__container-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab
+                            quod rerum commodi soluta et
                             accusantium eum similique officiis esse consectetur possimus labore, illo voluptates minus
                             cupiditate sunt incidunt voluptate vero.</p>
                     </div>
@@ -86,7 +100,7 @@
 
         <section class="menu" id="menu">
             <div class="wrapper">
-                <h2 class="section-heading">Menu</h2>
+                <h2 class="section__heading">Menu</h2>
                 <div class="underline"></div>
 
                 <div class="menu__container">
@@ -187,14 +201,15 @@
 
         <section id="events" class="events">
             <div class="wrapper">
-                <h2 class="section-heading">Wydarzenia</h2>
+                <h2 class="section__heading">Wydarzenia</h2>
                 <div class="underline"></div>
 
                 <div id="carouselExample" class="carousel slide">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div class="carousel__container">
-                                <img src="./img/events_picture.jpg" class="d-block w-100" alt="...">
+                                <img src="./img/events_picture.jpg" class="d-block w-100 carousel__container-img"
+                                    alt="...">
                                 <div class="carousel__container-text">
                                     <h3 class="carousel__heading">Lorem ipsum dolor sit amet consectetur adipisicing
                                         elit.
@@ -219,7 +234,8 @@
                         </div>
                         <div class="carousel-item">
                             <div class="carousel__container">
-                                <img src="./img/events_picture.jpg" class="d-block w-100" alt="...">
+                                <img src="./img/events_picture.jpg" class="d-block w-100 carousel__container-img"
+                                    alt="...">
                                 <div class="carousel__container-text">
                                     <h3 class="carousel__heading">Lorem ipsum dolor sit amet consectetur adipisicing
                                         elit.
@@ -245,7 +261,8 @@
 
                         <div class="carousel-item">
                             <div class="carousel__container">
-                                <img src="./img/events_picture.jpg" class="d-block w-100" alt="...">
+                                <img src="./img/events_picture.jpg" class="d-block w-100 carousel__container-img"
+                                    alt="...">
                                 <div class="carousel__container-text">
                                     <h3 class="carousel__heading">Lorem ipsum dolor sit amet consectetur adipisicing
                                         elit.
@@ -292,7 +309,7 @@
 
         <section class="contact" id="contact">
             <div class="wrapper">
-                <h2 class="section-heading">Kontakt</h2>
+                <h2 class="section__heading">Kontakt</h2>
                 <div class="underline"></div>
 
                 <h3 class="contact__heading">Skontaktuj się z nami</h3>
@@ -318,45 +335,45 @@
                             <input type="text" id="phone" class="contact__form-input">
                         </div>
                     </div>
-           
 
-            <div class="contact__form-down">
-                <label for="msg" class="contact__form-label">Wiadomość</label>
-                <textarea id="msg" class="contact__form-textarea"></textarea>
-                <button class="contact__form-btn btn">Wyślij</button>
-            </div>
 
-            </form>
+                    <div class="contact__form-down">
+                        <label for="msg" class="contact__form-label">Wiadomość</label>
+                        <textarea id="msg" class="contact__form-textarea"></textarea>
+                        <button class="contact__form-btn btn">Wyślij</button>
+                    </div>
 
-            <div class="contact__info">
-                <div class="contact__info-container">
-                    <i class="fa-solid fa-face-laugh-squint contact__info-icon"></i>
-                    <h3 class="contact__info-heading">Godziny otwarcia</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab quod rerum commodi soluta et
-                        accusantium eum similique officiis .</p>
-                </div>
-                <div class="contact__info-container">
-                    <i class="fa-solid fa-face-laugh-squint contact__info-icon"></i>
-                    <h3 class="contact__info-heading">Kontakt</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab quod rerum commodi soluta et
-                        accusantium eum similique officiis .</p>
-                </div>
-                <div class="contact__info-container">
-                    <i class="fa-solid fa-face-laugh-squint contact__info-icon"></i>
-                    <h3 class="contact__info-heading">Adres</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab quod rerum commodi soluta et
-                        accusantium eum similique officiis .</p>
-                </div>
+                </form>
 
-            </div>
-            <div class="contact__social-media">
-                <h3 class="contact__social-media-heading">Social media</h3>
-                <div class="contact__social-media-container">
-                    <i class="fa-solid fa-face-laugh-squint contact__social-media-container-icon"></i>
-                    <i class="fa-solid fa-face-laugh-squint contact__social-media-container-icon"></i>
-                    <i class="fa-solid fa-face-laugh-squint contact__social-media-container-icon"></i>
+                <div class="contact__info">
+                    <div class="contact__info-container">
+                        <i class="fa-solid fa-clock contact__info-icon"></i>
+                        <h3 class="contact__info-heading">Godziny otwarcia</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab quod rerum commodi soluta et
+                            accusantium eum similique officiis .</p>
+                    </div>
+                    <div class="contact__info-container">
+                        <i class="fa-solid fa-envelope contact__info-icon"></i>
+                        <h3 class="contact__info-heading">Kontakt</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab quod rerum commodi soluta et
+                            accusantium eum similique officiis .</p>
+                    </div>
+                    <div class="contact__info-container">
+                        <i class="fa-solid fa-location-dot contact__info-icon"></i>
+                        <h3 class="contact__info-heading">Adres</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab quod rerum commodi soluta et
+                            accusantium eum similique officiis .</p>
+                    </div>
+
                 </div>
-            </div>
+                <div class="contact__social-media">
+                    <h3 class="contact__social-media-heading">Social media</h3>
+                    <div class="contact__social-media-container">
+                        <i class="fa-brands fa-square-facebook contact__social-media-icon"></i>
+                        <i class="fa-brands fa-instagram contact__social-media-icon"></i>
+                        <i class="fa-brands fa-tiktok contact__social-media-icon"></i>
+                    </div>
+                </div>
             </div>
 
         </section>
@@ -376,6 +393,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+
+    <script src="./js/main.js"></script>
 
 
 </body>
