--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                 <a href="index.html#events" data-selector="#events" class="nav__items js-items">Wydarzenia</a>
                 <a href="index.html#contact" data-selector="#contact" class="nav__items js-items">Kontakt</a>
             </div>
-            <!-- <div class="nav_btn-container">
-                <a href="#cart" class="nav__items"><i class="fa-solid fa-basket-shopping"></i></a>
+            <div class="nav_btn-container">
+                <!-- <a href="#cart" class="nav__items"><i class="fa-solid fa-basket-shopping"></i></a> -->
                 <button class="nav__btn"> <i class="fa-solid fa-bars nav__bars "></i></button>
-            </div> -->
+            </div>
 
         </div>
     </nav>
@@ -220,7 +220,7 @@
             <div class="wrapper">
                 <h2 class="section__heading">Wydarzenia</h2>
                 <div class="underline"></div>
-                <div id="carouselExampleCaptions" class="carousel slide">
+                <div id="carouselExampleCaptions" class="carousel slide d-none d-md-block">
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
                             class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -233,7 +233,7 @@
                         <div class="carousel-item active">
                             <img src="./img/events_alice.jpg" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5>Czarodziejskie Spotkanie w Kawiarni</h5>
+                                <h3>Czarodziejskie Spotkanie w Kawiarni</h3>
                                 <p>Weź udział w zaczarowanym wydarzeniu, które przeniesie Cię w świat Alicji w Krainie
                                     Czarów! Odkryj tajemnicze smaki herbaty z Szalonym Kapelusznikiem, spróbuj naszych
                                     ciastek w kształcie uśmiechniętych kotów z Cheshire i doświadcz kolorowych
@@ -243,18 +243,18 @@
                         <div class="carousel-item">
                             <img src="./img/events_harry.jpg" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5>Magiczna Noc w Kawiarni Zaklęć</h5>
+                                <h3>Magiczna Noc w Kawiarni Zaklęć</h3>
                                 <p>Odkryj niezwykłe zaklęcia smaku w naszej kawiarni, gdzie magia spotyka się z pysznymi
                                     przekąskami! Przygotuj się na Magiczną Noc w naszym magicznym świecie Harry'ego
                                     Pottera. Rozkoszuj się kubkiem Gorącego Eliksiru Miłości, spróbuj naszych magicznych
                                     babeczek Smakosza, a może spotkasz swojego własnego Dobby'ego wśród naszych
-                                    przyjaznych baristów! </p>
+                                    przyjaznych baristów!</p>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img src="./img/events_pokemon.jpg" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5>Pokémonowa Wyprawa: Gotta Catch 'Em All!</h5>
+                                <h3>Pokémonowa Wyprawa: Gotta Catch 'Em All!</h3>
                                 <p>Przyłącz się do naszej Pokémonowej wyprawy w kawiarni, gdzie czeka na Ciebie wieczór
                                     pełen przygód w towarzystwie ulubionych Pokémonów! Odkryj smakowe inspiracje z
                                     różnych regionów, bierz udział w konkursach Pokémon Battle i zgarnij fantastyczne
@@ -275,104 +275,48 @@
                     </button>
                 </div>
 
-                <!-- <div id="carouselExample" class="carousel slide">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <div class="carousel__container">
-                                <img src="./img/events_picture.jpg" class="d-block w-100 carousel__container-img"
-                                    alt="...">
-                                <div class="carousel__container-text">
-                                    <h3 class="carousel__heading">Lorem ipsum dolor sit amet consectetur adipisicing
-                                        elit.
-                                    </h3>
-                                    <p class="carousel__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                                        Eligendi ad quidem odit, dicta quod omnis accusantium inventore dolores deleniti
-                                        ipsum magnam sit. Reprehenderit reiciendis temporibus voluptates fuga quidem!
-                                        Minus
-                                        iusto laudantium veritatis ipsa, voluptatibus cupiditate eius sed aperiam quia
-                                        architecto illum odit harum repellendus ipsam nesciunt nam blanditiis,
-                                        asperiores
-                                        earum soluta voluptate nisi est repellat? Animi quae voluptate corrupti facere
-                                        maiores explicabo est voluptates laborum dignissimos officia, deleniti, quidem
-                                        aliquid. Soluta beatae doloremque eius molestias consequatur sequi ipsum,
-                                        commodi
-                                        minus recusandae numquam impedit magnam voluptates iure ut cum quos ratione
-                                        quidem
-                                        earum corrupti assumenda rerum aliquam possimus adipisci? Illum, nam.</p>
-                                    <button class="carousel__btn btn">Czytaj więcej</button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <div class="carousel__container">
-                                <img src="./img/events_picture.jpg" class="d-block w-100 carousel__container-img"
-                                    alt="...">
-                                <div class="carousel__container-text">
-                                    <h3 class="carousel__heading">Lorem ipsum dolor sit amet consectetur adipisicing
-                                        elit.
-                                    </h3>
-                                    <p class="carousel__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                                        Eligendi ad quidem odit, dicta quod omnis accusantium inventore dolores deleniti
-                                        ipsum magnam sit. Reprehenderit reiciendis temporibus voluptates fuga quidem!
-                                        Minus
-                                        iusto laudantium veritatis ipsa, voluptatibus cupiditate eius sed aperiam quia
-                                        architecto illum odit harum repellendus ipsam nesciunt nam blanditiis,
-                                        asperiores
-                                        earum soluta voluptate nisi est repellat? Animi quae voluptate corrupti facere
-                                        maiores explicabo est voluptates laborum dignissimos officia, deleniti, quidem
-                                        aliquid. Soluta beatae doloremque eius molestias consequatur sequi ipsum,
-                                        commodi
-                                        minus recusandae numquam impedit magnam voluptates iure ut cum quos ratione
-                                        quidem
-                                        earum corrupti assumenda rerum aliquam possimus adipisci? Illum, nam.</p>
-                                    <button class="carousel__btn btn">Czytaj więcej</button>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="carousel-item">
-                            <div class="carousel__container">
-                                <img src="./img/events_picture.jpg" class="d-block w-100 carousel__container-img"
-                                    alt="...">
-                                <div class="carousel__container-text">
-                                    <h3 class="carousel__heading">Lorem ipsum dolor sit amet consectetur adipisicing
-                                        elit.
-                                    </h3>
-                                    <p class="carousel__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                                        Eligendi ad quidem odit, dicta quod omnis accusantium inventore dolores deleniti
-                                        ipsum magnam sit. Reprehenderit reiciendis temporibus voluptates fuga quidem!
-                                        Minus
-                                        iusto laudantium veritatis ipsa, voluptatibus cupiditate eius sed aperiam quia
-                                        architecto illum odit harum repellendus ipsam nesciunt nam blanditiis,
-                                        asperiores
-                                        earum soluta voluptate nisi est repellat? Animi quae voluptate corrupti facere
-                                        maiores explicabo est voluptates laborum dignissimos officia, deleniti, quidem
-                                        aliquid. Soluta beatae doloremque eius molestias consequatur sequi ipsum,
-                                        commodi
-                                        minus recusandae numquam impedit magnam voluptates iure ut cum quos ratione
-                                        quidem
-                                        earum corrupti assumenda rerum aliquam possimus adipisci? Illum, nam.</p>
-                                    <button class="carousel__btn btn">Czytaj więcej</button>
-                                </div>
-                            </div>
+                <div class="cards-container d-md-none ">
+                    <div class="card">
+                        <img src="./img/events_alice.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h3 class="card-title">Czarodziejskie Spotkanie w Kawiarni</h3>
+                            <p class="card-text">Weź udział w zaczarowanym wydarzeniu, które przeniesie Cię w świat
+                                Alicji w
+                                Krainie
+                                Czarów! Odkryj tajemnicze smaki herbaty z Szalonym Kapelusznikiem, spróbuj naszych
+                                ciastek w kształcie uśmiechniętych kotów z Cheshire i doświadcz kolorowych
+                                dekoracji, które przeniosą Cię do magicznego świata Carrolla. </p>
                         </div>
                     </div>
 
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
-                        data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
-                        data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
+                    <div class="card">
+                        <img src="./img/events_harry.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h3 class="card-title">Magiczna Noc w Kawiarni Zaklęć</h3>
+                            <p class="card-text">Odkryj niezwykłe zaklęcia smaku w naszej kawiarni, gdzie magia spotyka
+                                się
+                                z pysznymi
+                                przekąskami! Przygotuj się na Magiczną Noc w naszym magicznym świecie Harry'ego
+                                Pottera. Rozkoszuj się kubkiem Gorącego Eliksiru Miłości, spróbuj naszych magicznych
+                                babeczek Smakosza, a może spotkasz swojego własnego Dobby'ego wśród naszych
+                                przyjaznych baristów!</p>
+                        </div>
+                    </div>
 
+                    <div class="card">
+                        <img src="./img/events_pokemon.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h3 class="card-title">Pokémonowa Wyprawa: Gotta Catch 'Em All!</h3>
+                            <p class="card-text">Przyłącz się do naszej Pokémonowej wyprawy w kawiarni, gdzie czeka na
+                                Ciebie wieczór
+                                pełen przygód w towarzystwie ulubionych Pokémonów! Odkryj smakowe inspiracje z
+                                różnych regionów, bierz udział w konkursach Pokémon Battle i zgarnij fantastyczne
+                                nagrody! Przygotuj swoją drużynę i dołącz do nas na niezapomnianą przygodę w świecie
+                                Pokémonów!</p>
+                        </div>
+                    </div>
 
-                </div> -->
-
-
+                </div>
 
             </div>
         </section>
