--- a/rezerwacje.html
+++ b/rezerwacje.html
@@ -29,10 +29,10 @@
                 <a href="index.html#events" data-selector="#events" class="nav__items js-items">Wydarzenia</a>
                 <a href="index.html#contact" data-selector="#contact" class="nav__items js-items">Kontakt</a>
             </div>
-            <!-- <div class="nav_btn-container">
-                <a href="#cart" class="nav__items"><i class="fa-solid fa-basket-shopping"></i></a>
+            <div class="nav_btn-container">
+                <!-- <a href="#cart" class="nav__items"><i class="fa-solid fa-basket-shopping"></i></a> -->
                 <button class="nav__btn"> <i class="fa-solid fa-bars nav__bars "></i></button>
-            </div> -->
+            </div>
 
         </div>
     </nav>
