--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
                         <div class="menu__item-img-container">
                             <img class="menu__item-img" src="./img/black_coffee.jpg" alt="Filiżanka czarnej kawy">
                         </div>
-                        <h3 class="menu__item-heading">SAURON</h3>
-                        <p class="menu__item-text">Czarna jak jego serce...</p>
+                        <h3 class="menu__item-heading">Darth Vader</h3>
+                        <p class="menu__item-text">Wybierz ciemną stronę mocy...</p>
                         <p class="menu__item-product">kawa czarna 300ml</p>
                         <p class="menu__item-price">10 PLN</p>
                     </div>
