added rezerwacje.js and corrected header rwd

--- a/index.html
+++ b/index.html
@@ -375,7 +375,8 @@
                     <div class="contact__info-container">
                         <i class="fa-solid fa-location-dot contact__info-icon"></i>
                         <h3 class="contact__info-heading">Adres</h3>
-                        <p>ul. Gołębia 8, <br> 61-834 Poznań</p>
+                        <p>ul. Gołębia 8,</p>
+                        <p>61-834 Poznań</p>
                     </div>
 
                 </div>
