--- a/rezerwacje.html
+++ b/rezerwacje.html
@@ -133,8 +133,7 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 
-    <!-- <script src="./js/main.js"></script> -->
-
+    <script src="./js/rezerwacje.js"></script>
 
 </body>
 
