edited events rwd

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                             <img class="menu__item-img" src="./img/kawa_mrożona.jpg" alt="Szklanka mrożonej kawy">
                         </div>
                         <h3 class="menu__item-heading">Elsa</h3>
-                        <p class="menu__item-text">Niby zimna ale serduszko ogrzeje (masz te moc!)</p>
+                        <p class="menu__item-text">Niby zimna, ale serduszko ogrzeje (masz te moc!)</p>
                         <p class="menu__item-product">kawa mrożona 300ml</p>
                         <p class="menu__item-price">17 PLN</p>
                     </div>
