edited reservation rwd

--- a/index.html
+++ b/index.html
@@ -330,32 +330,32 @@
                 <h3 class="contact__heading">Skontaktuj się z nami</h3>
                 <p class="contact__text">Masz do nas pytania czarodzieju? Napisz do nas!</p>
 
-                <form class="contact__form">
+                <form class="form">
 
-                    <div class="contact__form-top">
-                        <div class="contact__form-top-line">
-                            <label for="name" class="contact__form-label">Imię</label>
-                            <input type="text" id="name" class="contact__form-input">
+                    <div class="form__top">
+                        <div class="form__top-line">
+                            <label for="name" class="form__label">Imię</label>
+                            <input type="text" id="name" class="form__input">
                         </div>
-                        <div class="contact__form-top-line">
-                            <label for="surname" class="contact__form-label">Nazwisko</label>
-                            <input type="text" id="surname" class="contact__form-input">
+                        <div class="form__top-line">
+                            <label for="surname" class="form__label">Nazwisko</label>
+                            <input type="text" id="surname" class="form__input">
                         </div>
-                        <div class="contact__form-top-line">
-                            <label for="mail" class="contact__form-label">E-mail</label>
-                            <input type="text" id="mail" class="contact__form-input">
+                        <div class="form__top-line">
+                            <label for="mail" class="form__label">E-mail</label>
+                            <input type="text" id="mail" class="form__input">
                         </div>
-                        <div class="contact__form-top-line">
-                            <label for="phone" class="contact__form-label">Telefon</label>
-                            <input type="text" id="phone" class="contact__form-input">
+                        <div class="form__top-line">
+                            <label for="phone" class="form__label">Telefon</label>
+                            <input type="text" id="phone" class="form__input">
                         </div>
                     </div>
 
 
-                    <div class="contact__form-down">
-                        <label for="msg" class="contact__form-label">Wiadomość</label>
-                        <textarea id="msg" class="contact__form-textarea"></textarea>
-                        <button class="contact__form-btn btn">Wyślij</button>
+                    <div class="form__down">
+                        <label for="msg" class="form__label">Wiadomość</label>
+                        <textarea id="msg" class="form__textarea"></textarea>
+                        <button class="form__btn btn">Wyślij</button>
                     </div>
 
                 </form>
