reservation view edit

--- a/rezerwacje.html
+++ b/rezerwacje.html
@@ -36,20 +36,18 @@
 
         </div>
     </nav>
-    <header class="header header__img">
+    <!-- <header class="header header__img">
         <div class="wrapper">
             <div class="header__container">
                 <h1 class="header__title">Witamy w CosPlay Café!</h1>
                 <p class="header__text">Chcesz poczuć się jak na konwencie? Zapraszamy do nas!</p>
                 <div class="header__btn-container">
-                    <!-- <a href="#menu">
-                        <button class="header__btn btn">Zamów online</button></a> -->
                     <a href="rezerwacje.html"><button class="header__btn btn">Zarezerwuj stolik</button></a>
                 </div>
             </div>
         </div>
         <div class="header__shadow"></div>
-    </header>
+    </header> -->
 
     <section class="reservations" id="rezerwacje">
         <div class="wrapper">
