added info after send form

--- a/index.html
+++ b/index.html
@@ -343,11 +343,11 @@
                         </div>
                         <div class="form__top-line">
                             <label for="mail" class="form__label">E-mail</label>
-                            <input type="text" id="mail" class="form__input">
+                            <input type="email" id="mail" class="form__input">
                         </div>
                         <div class="form__top-line">
                             <label for="phone" class="form__label">Telefon</label>
-                            <input type="text" id="phone" class="form__input">
+                            <input type="phone" id="phone" class="form__input">
                         </div>
                     </div>
 
@@ -357,7 +357,7 @@
                         <textarea id="msg" class="form__textarea"></textarea>
                         <button class="form__btn btn">Wyślij</button>
                     </div>
-
+                    <p class="form__info"></p>
                 </form>
 
                 <div class="contact__info">
