--- a/rezerwacje.html
+++ b/rezerwacje.html
@@ -68,7 +68,7 @@
                 <div class="form__top">
                     <div class="form__top-line form__top-line--reservation">
                         <label for="email" class="form__label--reservation">E-mail</label>
-                        <input type="text" id="email" class="input-style">
+                        <input type="email" id="email" class="input-style">
                     </div>
                     <div class="form__top-line form__top-line--reservation">
                         <label for="phone" class="form__label--reservation">Telefon</label>
