added validation form

--- a/index.html
+++ b/index.html
@@ -357,7 +357,12 @@
                         <textarea id="msg" class="form__textarea"></textarea>
                         <button class="form__btn btn">Wyślij</button>
                     </div>
-                    <p class="form__info"></p>
+
+                    <div class="form__info-container">
+                        <p class="form__info"></p>
+                        <p class="form__info-email"></p>
+                        <p class="form__info-phone"></p>
+                    </div>
                 </form>
 
                 <div class="contact__info">
