--- a/rezerwacje.html
+++ b/rezerwacje.html
@@ -68,7 +68,7 @@
                 <div class="form__top">
                     <div class="form__top-line form__top-line--reservation">
                         <label for="email" class="form__label--reservation">E-mail</label>
-                        <input type="email" id="email" class="input-style">
+                        <input type="mail" id="mail" class="input-style">
                     </div>
                     <div class="form__top-line form__top-line--reservation">
                         <label for="phone" class="form__label--reservation">Telefon</label>
@@ -111,6 +111,11 @@
                 <button class="btn form__btn form__btn--reservation">Wybierz</button>
             </form>
 
+        </div>
+        <div class="form__info-container">
+            <p class="form__info"></p>
+            <p class="form__info-email"></p>
+            <p class="form__info-phone"></p>
         </div>
     </section>
 
