added time validation

--- a/rezerwacje.html
+++ b/rezerwacje.html
@@ -100,7 +100,7 @@
                 <div class="form__top">
                     <div class="form__top-line form__top-line--reservation">
                         <label for="hour" class="form__label--reservation">Godzina</label>
-                        <input type="time" id="hour" class="input-style">
+                        <input type="time" id="hour" class="input-style" value="12:00">
                     </div>
                     <div class="form__top-line form__top-line--reservation">
                         <label for="date" class="form__label--reservation">Data</label>
@@ -116,6 +116,7 @@
             <p class="form__info"></p>
             <p class="form__info-email"></p>
             <p class="form__info-phone"></p>
+            <p class="form__info-hour"></p>
         </div>
     </section>
 
