added date validation

--- a/rezerwacje.html
+++ b/rezerwacje.html
@@ -117,6 +117,7 @@
             <p class="form__info-email"></p>
             <p class="form__info-phone"></p>
             <p class="form__info-hour"></p>
+            <p class="form__info-date"></p>
         </div>
     </section>
 
